--- a/app/src/main/res/layout/dialog_delete.xml
+++ b/app/src/main/res/layout/dialog_delete.xml
@@ -28,15 +28,15 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/no_button"
+                android:id="@+id/edit_card_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="No "
+                android:text="EDIT"
                 android:textAlignment="center"
                 android:layout_marginLeft="32dp"
                 android:layout_marginRight="32dp"
-                android:backgroundTint="@color/high"/>
+                android:backgroundTint="@color/med"/>
 
             <Button
                 android:id="@+id/yes_button"
@@ -47,7 +47,7 @@
                 android:textAlignment="center"
                 android:layout_marginLeft="32dp"
                 android:layout_marginRight="32dp"
-                android:backgroundTint="@color/low"/>
+                android:backgroundTint="@color/high"/>
 
         </LinearLayout>
     </LinearLayout>
