--- a/app/src/main/res/layout/dialog_set_edit.xml
+++ b/app/src/main/res/layout/dialog_set_edit.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <EditText
         android:id="@+id/set_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:backgroundTint="@android:color/transparent"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@color/colorPrimary"
         android:shadowColor="@android:color/transparent"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:text="Delete" />
